# mail-router

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements-test.txt
scripts/: __init__.py  print_emails.py  renew_subscription.py  setup_subscription.py
services/: __init__.py  ai_classifier.py  email_processor.py  queue.py  subscription_manager.py  tasks.py
utils/: auth.py  clean_body.py  pdf_extractor.py
